RESOLVED FIXED70450
fix repaint bugs in new flexbox
https://bugs.webkit.org/show_bug.cgi?id=70450
Summary fix repaint bugs in new flexbox
Tony Chang
Reported 2011-10-19 16:07:24 PDT
fix repaint bugs in new flexbox
Attachments
Patch (27.48 KB, patch)
2011-10-19 16:09 PDT, Tony Chang
no flags
Patch for landing (62.48 KB, patch)
2011-10-20 11:54 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2011-10-19 16:09:52 PDT
Dave Hyatt
Comment 2 2011-10-20 11:18:22 PDT
Comment on attachment 111691 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=111691&action=review > Source/WebCore/rendering/RenderFlexibleBox.cpp:706 > + if (!selfNeedsLayout() && child->checkForRepaintDuringLayout()) > + child->repaintDuringLayoutIfMoved(oldRect); Shouldn't this be done inside setFlowAwareLogicalLocationForChild?
Dave Hyatt
Comment 3 2011-10-20 11:19:06 PDT
Never mind. Disregard.
Dave Hyatt
Comment 4 2011-10-20 11:19:18 PDT
Comment on attachment 111691 [details] Patch r=me
Tony Chang
Comment 5 2011-10-20 11:54:02 PDT
Created attachment 111817 [details] Patch for landing
Tony Chang
Comment 6 2011-10-20 11:54:28 PDT
(In reply to comment #5) > Created an attachment (id=111817) [details] > Patch for landing I added an rtl-column test case on Ojan's suggestion.
WebKit Review Bot
Comment 7 2011-10-20 15:03:13 PDT
Comment on attachment 111817 [details] Patch for landing Clearing flags on attachment: 111817 Committed r98024: <http://trac.webkit.org/changeset/98024>
WebKit Review Bot
Comment 8 2011-10-20 15:03:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.