fix repaint bugs in new flexbox https://bugs.webkit.org/show_bug.cgi?id=70450

Reviewed by David Hyatt.

Source/WebCore:

Test: css3/flexbox/repaint.html
      css3/flexbox/repaint-rtl-column.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutBlock): Use LayoutRepainter and LayoutStateMaintainer
    to repaint the flexbox.
(WebCore::RenderFlexibleBox::layoutAndPlaceChildrenInlineDirection):
(WebCore::RenderFlexibleBox::adjustLocationLogicalTopForChild): Use repaintDuringLayoutIfMoved
    when changing the alignment of a child to handle the child moving.

LayoutTests:

* css3/flexbox/repaint-expected.txt: Added.
* css3/flexbox/repaint-rtl-column-expected.txt: Added.
* css3/flexbox/repaint-rtl-column.html: Added.
* css3/flexbox/repaint.html: Added.
* platform/chromium-linux/css3/flexbox/repaint-expected.png: Added.
* platform/chromium-linux/css3/flexbox/repaint-rtl-columnexpected.png: Added.


Canonical link: https://commits.webkit.org/86736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98024 268f45cc-cd09-0410-ab3c-d52691b4dbfc